HTML parser ready and printing.

--- a/EX4.html
+++ b/EX4.html
@@ -8,7 +8,7 @@
 		<h1> Titulo </h1>
 		<h2> Ejemplo 1 </h2>
 		<p>Un parrafo de texto.</p>
-		<p> Esto <b>prueba</b> las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<p> Esto <b>prueba 2</b> las  <i>etiquetas</i> de <u>formato</u> html </p>
 	</body>
 </html>
 
