--- a/EX4.html
+++ b/EX4.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Ejemplo de estilos CSS en el propio documento</title>
 		<link href="EX1.css" rel="stylesheet" type="text/css">
+		<link href="EX2.css" rel="stylesheet" type="text/css">
 	</head>
 	<!-- COMMENT: los consume el lexer, que se los carga y sigue -->
 	<body>
