End of subject.

--- a/EX4.html
+++ b/EX4.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title>Ejemplo de estilos CSS en el propio documento</title>
+		<link href="Default.css" rel="stylesheet" type="text/css">
 		<link href="EX1.css" rel="stylesheet" type="text/css">
-		<link href="EX2.css" rel="stylesheet" type="text/css">
 	</head>
 	<!-- COMMENT: los consume el lexer, que se los carga y sigue -->
 	<body>
