Refactoring and error handling in UI.

--- a/res/html/EX4.html
+++ b/res/html/EX4.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Ejemplo de estilos CSS en el propio documento</title>
-		<link href="EX1.css" rel="stylesheet" type="text/css">
+		<link href="res/css/EX1.css" rel="stylesheet" type="text/css">
 	</head>
 	<!-- COMMENT: los consume el lexer, que se los carga y sigue -->
 	<body>
