Working with GUI. Pending alignment.

--- a/res/html/EX4.html
+++ b/res/html/EX4.html
@@ -9,6 +9,42 @@
 		<h2> Ejemplo 1 </h2>
 		<p>Un parrafo de texto.</p>
 		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<h1> Titulo </h1>
+		<h2> Ejemplo 1 </h2>
+		<p>Un parrafo de texto.</p>
+		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
 	</body>
 </html>
 
