--- a/res/html/EX4.html
+++ b/res/html/EX4.html
@@ -3,44 +3,8 @@
 		<title>Ejemplo de estilos CSS en el propio documento</title>
 		<link href="res/css/EX1.css" rel="stylesheet" type="text/css">
 	</head>
-	<!-- COMMENT: los consume el lexer, que se los carga y sigue -->
+	<!-- COMMENT: El lexer consume comentarios y sigue -->
 	<body>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
 		<h1> Titulo </h1>
 		<h2> Ejemplo 1 </h2>
 		<p>Un parrafo de texto.</p>
