--- a/res/html/EX1.html
+++ b/res/html/EX1.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
-		<title>Ejemplo de estilos CSS en el propio documento</title>
+		<title>Ejemplo 1 - Estilos</title>
 		<link href="res/css/EX1.css" rel="stylesheet" type="text/css">
 	</head>
 	<!-- COMMENT: El lexer consume comentarios y sigue -->
 	<body>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
+		<h1> Ejemplo HTML 1 </h1>
+		<h2> Encabezado nivel 2 </h2>
 		<p>Un parrafo de texto.</p>
-		<p> Esto es una <b>prueba 2</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
+		<p> Esto es una <b>prueba</b> de las  <i>etiquetas</i> de <u>formato</u> html </p>
 	</body>
 </html>
 
