--- a/res/html/welcome.html
+++ b/res/html/welcome.html
@@ -33,7 +33,10 @@
 		<h1> Ejemplos de uso</h1>
 		<p>Hay algunos HTMLs listos en la carpeta <b>res/html</b> del proyecto.</p>
 		<p>Estos HTMLs usan ficheros CSS de la carpeta <b>res/css</b> del proyecto.</p>
-		<p><b>El navegador usa de base los estilos en res/css/Default.css.</b></p>
+		<p>El estilo base es <b>res/css/Default.css</b>, que <b>se sobreescribe con los especificados en los HTMLs.</b></p>
+		
+		<p></p>
+		
 		<p>Para probar los ejemplos puedes:</p>
 		<p> 1 - Abrir una nueva pestaña.</p>
 		<p> 2 - Abrir el fichero <b>res/html/EX1.html:</b> HTML de ejemplo con H1, H2 y P.</p>
